Criei o efeito parallax

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -53,6 +53,9 @@ section{
     font-family: var(--fonte3);
     font-size: 3.5vw;
 }
+section p{
+    padding-bottom: 2em;
+}
 .normal{
     background-color: white;
     color: rgb(33, 32, 32);
@@ -60,11 +63,22 @@ section{
 .imagem{
     background-color: rgb(56, 55, 55);
     color: white;
+    background-position: right center;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.625);
+    background-attachment: fixed;
 }
 .imagem p{
     display: inline-block;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.267);
+    background-color: rgba(0, 0, 0, 0.462);
+    text-shadow: 1px 1px 0px black;
+}
+#img01{
+    background-image: url(../imagens/imagens/background001.jpg);
+}
+#img02{
+    background-image: url(../imagens/imagens/background002.jpg);
 }
 
 /*FOOTER*/
