--- a/estilo/style.css
+++ b/estilo/style.css
@@ -75,10 +75,10 @@ section.imagem p{
     text-shadow: 1px 1px 0px black;
 }
 section#img01{
-    background-image: url(../imagens/imagens/background001.jpg);
+    background-image: url(./../imagens/imagens/background001.jpg);
 }
 section#img02{
-    background-image: url(../imagens/imagens/background002.jpg);
+    background-image: url(./../imagens/imagens/background002.jpg);
 }
 
 /*FOOTER*/
